--- a/health-wellness-frontend/package.json
+++ b/health-wellness-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
@@ -20,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "sass": "^1.85.0",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
