--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
